Wider max width. Fix for too wide members list in index.

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,9 +60,10 @@ a:visited { color: #205caa; }
 /* Utility */
 
 .wrap {
-  max-width: 1200px;
-  padding: 0 30px;
   margin: 0 auto;
+  max-width: 2000px;
+  padding: 0 30px;
+  width: 85%;
   zoom: 1;
 }
 
@@ -131,7 +132,6 @@ a:visited { color: #205caa; }
     display: table;
     height: 100%;
     padding: 0;
-    width: 100%;
   }
 }
 
@@ -360,10 +360,11 @@ a:visited { color: #205caa; }
   .members {
     background-color: #e1e1e1;
     text-align: center;
+    overflow-x: auto;
+    width: 100%;
 
     ul {
-      font-size: 0; // for horizontal scrolling
-      overflow: auto;
+      max-width: 0;  // This prevents it from being too wide
       padding: 20px;
       white-space: nowrap;
       width: auto;
@@ -373,7 +374,6 @@ a:visited { color: #205caa; }
 
     li {
       display: inline-block;
-      font-size: 16px;
       min-width: 10em;
       padding: 0 0.75em;
       vertical-align: top;
@@ -598,6 +598,8 @@ a:visited { color: #205caa; }
 
 
 @media screen and (max-width: 750px) {
+
+  .wrap { width: 100%; }
 
   #home-news,
   #home-events {
